--- a/privacy.html
+++ b/privacy.html
@@ -45,7 +45,7 @@
 
     <p>Reservamo-nos o direito de atualizar ou modificar esta Política de Privacidade a qualquer momento. Recomendamos que você revise periodicamente esta página para ficar ciente de eventuais alterações.</p>
 
-    <p>Se tiver dúvidas ou preocupações sobre nossa Política de Privacidade, entre em contato conosco através do <a href="mailto:[e-mail de contato]">e-mail de contato</a>.</p>
+    <p>Se tiver dúvidas ou preocupações sobre nossa Política de Privacidade, entre em contato conosco através do <a href="mailto:douglas.franco@dzfweb.com.br">e-mail de contato</a>.</p>
 
     <p>Obrigado por confiar em DZF Web com suas informações pessoais. Estamos comprometidos em proteger sua privacidade e garantir uma experiência segura em nosso site.</p>
 
